@@ -14,8 +14,10 @@
 - Expose library to parse DIFF format. It is available as 'zanuda.diff_parser' ocamlfind package.
 - #28: Add lint about nested if expressions.
   (contributed by @Artem-Rzhankoff)
-  #32: Add lint about constructor names that hide default constructor names (contributed by @nnemakin)
-
+- #32: Add lint about constructor names that hide default constructor names 
+  (contributed by @nnemakin)
+- #34: Add lints that detects manual implementations of List.map/fold functions
+  (contributed by @nnemakin)
 
 ### Changed
 
